select option spacing fix

--- a/src/components/select/style/index.less
+++ b/src/components/select/style/index.less
@@ -56,7 +56,7 @@
 		display: block;
 		min-width: inherit;
 		// Show a max of 4 options plus half an option to hint at there being more when you scroll.
-		max-height: (((unit(@line-height, em) + @input-padding-y * 2 + @select-option-spacing) * 4.5) + (@input-padding-y * 2));
+		max-height: (((unit(@line-height, em) + @input-padding-y * 2) * 4.5) + @input-padding-y * 2 + @select-option-spacing * 4);
 		padding: @input-padding-y;
 		margin-top: @outline-width;
 		background-color: var(--select-bg-list);
@@ -97,7 +97,7 @@
 		}
 
 		& + .@{select-prefix}-option {
-			margin-top: @input-padding-y;
+			margin-top: @select-option-spacing;
 		}
 
 		& .@{icon-prefix} {
